fixed game view on ios safari in landscape orientation with minimal ui

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,32 +1,34 @@
 html, body {
-    position: fixed;
-    top: 0;
-    left: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
 
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 
-    overflow: hidden;
-    
-    user-select: none;
-    -webkit-user-select: none;
+  overflow: hidden;
+  
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 #root, #ui-root {
-    position: absolute;
-
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 #root {
-    z-index: 1;
+  position: absolute;
+
+  z-index: 1;
 }
 
 #ui-root {
-    z-index: 2;
+  position: fixed;
+
+  z-index: 2;
 }
